tests/alert-example/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alert-example
spec:
  to:
    kind: Service
    name: alert-example
  tls:
    termination: edge
