tests/alert-example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-example
spec:
  selector:
    app: alert-example
  ports:
  - name: http
    port: 80
    targetPort: 8080
